build_err.txt
[DEBUG build_start] Build function started (session: A)
[DEBUG target_optimize_setup] Target and optimize options set (session: A)
[DEBUG build_complete] Build function completed successfully (session: A)
install
+- install nyon_editor
   +- compile exe nyon_editor Debug native 11 errors
src\animation.zig:6:30: error: root source file struct 'raylib_stub' has no member named 'Quaternion'
pub const Quaternion = raylib.Quaternion;
                       ~~~~~~^~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
const std = @import("std");
^~~~~
referenced by:
    animation.Transform: src\animation.zig:11:15
    Transform: src\animation.zig:9:23
    12 reference(s) hidden; use '-freference-trace=14' to see all references
src\animation.zig:55:33: error: root source file struct 'raylib_stub' has no member named 'ModelAnimation'
        raylib_animation: raylib.ModelAnimation,
                          ~~~~~~^~~~~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
const std = @import("std");
^~~~~
src\asset.zig:25:48: error: root source file struct 'raylib_stub' has no member named 'Model'
    models: std.StringHashMap(AssetEntry(raylib.Model)),
                                         ~~~~~~^~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
const std = @import("std");
^~~~~
src\main_editor.zig:64:29: error: root source file struct 'raylib_stub' has no member named 'RenderTexture2D'
    viewport_texture: raylib.RenderTexture2D,
                      ~~~~~~^~~~~~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
const std = @import("std");
^~~~~
src\nodes\node_graph.zig:77:24: error: root source file struct 'raylib_stub' has no member named 'Texture2D'
        texture: raylib.Texture2D,
                 ~~~~~~^~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
const std = @import("std");
^~~~~
src\performance.zig:93:26: error: root source file struct 'raylib_stub' has no member named 'Model'
            model: raylib.Model,
                   ~~~~~~^~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
const std = @import("std");
^~~~~
src\performance.zig:232:25: error: root source file struct 'raylib_stub' has no member named 'Material'
        material: raylib.Material,
                  ~~~~~~^~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
const std = @import("std");
^~~~~
src\performance.zig:393:30: error: root source file struct 'raylib_stub' has no member named 'Vector4'
    frustum_planes: [6]raylib.Vector4,
                       ~~~~~~^~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
const std = @import("std");
^~~~~
src\post_processing.zig:8:38: error: root source file struct 'raylib_stub' has no member named 'Shader'
    shaders: std.StringHashMap(raylib.Shader),
                               ~~~~~~^~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
const std = @import("std");
^~~~~
src\rendering.zig:276:38: error: root source file struct 'raylib_stub' has no member named 'Shader'
    shaders: std.StringHashMap(raylib.Shader),
                               ~~~~~~^~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
const std = @import("std");
^~~~~
src\scene.zig:11:33: error: root source file struct 'raylib_stub' has no member named 'Model'
    models: std.ArrayList(raylib.Model),
                          ~~~~~~^~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
const std = @import("std");
^~~~~
error: 11 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1657+985a3565c\\zig.exe" build-exe -ODebug --dep raylib --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\editor.zig" "-Mraylib=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" -ODebug --dep raylib --dep zglfw --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_editor --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1657+985a3565c\\lib\\" --listen=-

install
+- install nyon_game
   +- compile exe nyon_game Debug native 3 errors
src\application.zig:111:64: error: expected type 'i32', found 'raylib_stub.KeyboardKey'
            const ctrl_down = Input.Keyboard.isDown(KeyboardKey.left_control) or Input.Keyboard.isDown(KeyboardKey.right_control);
                                                    ~~~~~~~~~~~^~~~~~~~~~~~~
src\raylib_stub.zig:90:25: note: enum declared here
pub const KeyboardKey = enum(c_int) {
                        ^~~~
src\raylib_stub.zig:185:30: note: parameter type declared here
pub extern fn isKeyDown(key: i32) bool;
                             ^~~
referenced by:
    main: src\main.zig:17:16
    callMain [inlined]: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1657+985a3565c\lib\std\start.zig:714:37
    callMainWithArgs [inlined]: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1657+985a3565c\lib\std\start.zig:674:20
    main: C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1657+985a3565c\lib\std\start.zig:689:28
    1 reference(s) hidden; use '-freference-trace=5' to see all references
src\game\sandbox.zig:223:37: error: expected type 'c_int', found 'raylib_stub.CameraProjection'
                .projection = engine.CameraProjection.perspective,
                ~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\raylib_stub.zig:85:30: note: enum declared here
pub const CameraProjection = enum(c_int) {
                             ^~~~
src\ui\ui.zig:229:36: error: no field or member function named 'readToEndAlloc' in 'fs.File'
        const file_bytes = try file.readToEndAlloc(allocator, 256 * 1024);
                               ~~~~^~~~~~~~~~~~~~~
C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1657+985a3565c\lib\std\fs\File.zig:1:1: note: struct declared here
const File = @This();
^~~~~
error: 3 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1657+985a3565c\\zig.exe" build-exe -ODebug --dep raylib --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\main.zig" "-Mraylib=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" -ODebug --dep raylib --dep zglfw --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_game --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1657+985a3565c\\lib\\" --listen=-

Build Summary: 0/5 steps succeeded (2 failed)
install transitive failure
+- install nyon_game transitive failure
|  +- compile exe nyon_game Debug native 3 errors
+- install nyon_editor transitive failure
   +- compile exe nyon_editor Debug native 11 errors

error: the following build command failed with exit code 1:
.zig-cache\o\87f1373c0683b91e37d2195f715f6100\build.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1657+985a3565c\zig.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1657+985a3565c\lib C:\Users\donald\nyon-game .zig-cache C:\Users\donald\AppData\Local\zig --seed 0xf79a8623 -Z2a029e72495ee918
